add transaction/user endpoint
