# src/api/transaction/transactionRouter.ts
@@ -9,3 +9,4 @@ transactionRouter.get('/list', transactionController.getAllTransactions)
 transactionRouter.post('/add', authMiddleware, transactionController.createTransaction as Application)
 transactionRouter.put('/update/:id', authMiddleware, transactionController.updateTransaction as Application)
 transactionRouter.delete('/delete/:id', authMiddleware, transactionController.deleteTransaction as Application)
+transactionRouter.get('/user', authMiddleware, transactionController.getAllTransactionsForUser as Application)
